// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaUpload 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
  <div
    class="buttons"
  />
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload in disabled state 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default disabled"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload with a different image size 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
  <div
    class="buttons"
  />
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload with an empty icon if no image is passed 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default"
      data-testid="dropzone-root"
    >
      <div
        class="emptyIndicator"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload with an error message from the MediaUploadStore 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default disabled"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
  <div
    class="errorText"
  >
    The uploaded file exceeds the configured maximum filesize.
  </div>
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload with the round skin 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer round"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Upload media
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
  <div
    class="buttons"
  />
</DocumentFragment>
`;

exports[`Render a SingleMediaUpload without delete and download button 1`] = `
<DocumentFragment>
  <div
    data-testid="dropzone"
  >
    <div
      class="mediaContainer default"
      data-testid="dropzone-root"
    >
      <img
        class="thumbnail"
        src="sulu-400x400"
      />
      <div
        class="uploadIndicatorContainer"
      >
        <div
          class="uploadIndicator"
        >
          <div>
            <div
              class="uploadInfoText"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <input
        data-testid="dropzone-input"
      />
    </div>
  </div>
  <div
    class="buttons"
  />
</DocumentFragment>
`;
